--- a/Backend/mistral/TutorDigitalMistra/front/login.html
+++ b/Backend/mistral/TutorDigitalMistra/front/login.html
@@ -172,7 +172,7 @@
             opacity: 0;
             transform-origin: center;
             transform-box: fill-box;
-            animation: fadeInScale 0.2s cubic-bezier(0.34, 1.56, 0.64, 1) forwards 0.6s;
+            animation: fadeInScale 0.2s cubic-bezier(0.34, 1.56, 0.64, 1) forwards 0.6s, lookAround 8s infinite 2s;
         }
 
         @keyframes drawPath {
@@ -202,6 +202,71 @@
 
             50% {
                 transform: translateY(-10px) rotateY(8deg);
+            }
+        }
+
+        /* --- BLINK ANIMATIONS (Path Morphing) --- */
+        .eye-left {
+            animation: drawPath 1.5s ease-out forwards, blinkPathLeft 5s infinite 2s !important;
+        }
+
+        .eye-right {
+            animation: drawPath 1.5s ease-out forwards, blinkPathRight 5s infinite 2s !important;
+        }
+
+        @keyframes blinkPathLeft {
+
+            0%,
+            45%,
+            55%,
+            100% {
+                d: path("m 803.38981,592.25277 c 0,88.96465 5.93388,161.08474 -113.49152,161.08475 -119.4254,10e-6 -113.49153,-72.12009 -113.49153,-161.08475 0,-88.96466 50.81189,-161.08476 113.49153,-161.08475 62.67964,0 113.49152,72.1201 113.49152,161.08475 z");
+            }
+
+            50% {
+                /* Top Vertex moved to match Bottom Vertex Height approx */
+                d: path("m 803.38981,592.25277 c 0,88.96465 5.93388,161.08474 -113.49152,161.08475 -119.4254,10e-6 -113.49153,-72.12009 -113.49153,-161.08475 0,88.96466 50.81189,161.08476 113.49153,161.08475 62.67964,0 113.49152,-72.1201 113.49152,-161.08475 z");
+            }
+        }
+
+        @keyframes blinkPathRight {
+
+            0%,
+            45%,
+            55%,
+            100% {
+                d: path("m 1345.3898,592.25277 c 0,88.96465 5.9339,161.08474 -113.4915,161.08475 -119.4254,10e-6 -113.4916,-72.12009 -113.4916,-161.08475 0,-88.96466 50.8119,-161.08476 113.4916,-161.08475 62.6796,0 113.4915,72.1201 113.4915,161.08475 z");
+            }
+
+            50% {
+                /* Top Vertex moved to match Bottom Vertex Height approx */
+                d: path("m 1345.3898,592.25277 c 0,88.96465 5.9339,161.08474 -113.4915,161.08475 -119.4254,10e-6 -113.4916,-72.12009 -113.4916,-161.08475 0,88.96466 50.8119,161.08476 113.4916,161.08475 62.6796,0 113.4915,-72.1201 113.4915,-161.08475 z");
+            }
+        }
+
+        /* Clip Path Animations (No stroke drawing, just morphing) */
+        .clip-left {
+            animation: blinkPathLeft 5s infinite 2s !important;
+        }
+
+        .clip-right {
+            animation: blinkPathRight 5s infinite 2s !important;
+        }
+
+        @keyframes blinkHide {
+
+            0%,
+            45% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0;
+            }
+
+            55%,
+            100% {
+                opacity: 1;
             }
         }
 
@@ -390,12 +455,22 @@
             <div class="logo-area" title="¡Soy el HoloMentor!">
                 <div>
                     <svg class="main-logo-svg" viewBox="0 0 1088.7649 852.07928" xmlns="http://www.w3.org/2000/svg">
+                        <defs>
+                            <clipPath id="clip-eye-left">
+                                <path class="clip-left"
+                                    d="m 803.38981,592.25277 c 0,88.96465 5.93388,161.08474 -113.49152,161.08475 -119.4254,10e-6 -113.49153,-72.12009 -113.49153,-161.08475 0,-88.96466 50.81189,-161.08476 113.49153,-161.08475 62.67964,0 113.49152,72.1201 113.49152,161.08475 z" />
+                            </clipPath>
+                            <clipPath id="clip-eye-right">
+                                <path class="clip-right"
+                                    d="m 1345.3898,592.25277 c 0,88.96465 5.9339,161.08474 -113.4915,161.08475 -119.4254,10e-6 -113.4916,-72.12009 -113.4916,-161.08475 0,-88.96466 50.8119,-161.08476 113.4916,-161.08475 62.6796,0 113.4915,72.1201 113.4915,161.08475 z" />
+                            </clipPath>
+                        </defs>
                         <g transform="translate(-285.32944,-133.48322)">
-                            <path class="logo-path-a"
+                            <path class="logo-path-a eye-left"
                                 d="m 803.38981,592.25277 c 0,88.96465 5.93388,161.08474 -113.49152,161.08475 -119.4254,10e-6 -113.49153,-72.12009 -113.49153,-161.08475 0,-88.96466 50.81189,-161.08476 113.49153,-161.08475 62.67964,0 113.49152,72.1201 113.49152,161.08475 z" />
                             <path class="logo-path-a"
                                 d="m 1170.3121,888.92622 c 0,39.03876 -3.9231,70.68594 -56.3284,70.68594 -52.4053,5e-5 -56.3285,-31.64714 -56.3285,-70.68594 0,-39.03878 28.8239,-70.68598 56.3285,-70.68597 27.5046,0 56.3284,31.6472 56.3284,70.68597 z" />
-                            <path class="logo-path-a"
+                            <path class="logo-path-a eye-right"
                                 d="m 1345.3898,592.25277 c 0,88.96465 5.9339,161.08474 -113.4915,161.08475 -119.4254,10e-6 -113.4916,-72.12009 -113.4916,-161.08475 0,-88.96466 50.8119,-161.08476 113.4916,-161.08475 62.6796,0 113.4915,72.1201 113.4915,161.08475 z" />
                             <path class="logo-path-b"
                                 d="m 867.00175,430.48341 c 0,135.62182 2.15606,203.59213 1.08831,269.64165 -1.06775,66.04952 171.67094,73.5806 199.33214,10.35492" />
@@ -403,12 +478,16 @@
                             <path class="logo-path-b" d="M 312.66514,431.77819 V 752.72734" />
                             <path class="logo-path-b"
                                 d="m 492.07373,608.09068 c 0,0 -44.75169,20 -90.20932,20 -45.45763,0 -84.73984,-20 -84.73984,-20" />
-                            <path class="logo-path-c"
-                                d="m 651.70552,604.41071 a 39.262405,69.895706 0 0 1 -39.2624,69.8957 39.262405,69.895706 0 0 1 -39.26241,-69.8957 39.262405,69.895706 0 0 1 39.26241,-69.89571 39.262405,69.895706 0 0 1 39.2624,69.89571 z" />
-                            <path class="logo-path-c"
-                                d="m 1193.7055,604.41071 a 39.262405,69.895706 0 0 1 -39.2624,69.8957 39.262405,69.895706 0 0 1 -39.2624,-69.8957 39.262405,69.895706 0 0 1 39.2624,-69.89571 39.262405,69.895706 0 0 1 39.2624,69.89571 z" />
+                            <g clip-path="url(#clip-eye-left)">
+                                <path class="logo-path-c"
+                                    d="m 651.70552,604.41071 a 39.262405,69.895706 0 0 1 -39.2624,69.8957 39.262405,69.895706 0 0 1 -39.26241,-69.8957 39.262405,69.895706 0 0 1 39.26241,-69.89571 39.262405,69.895706 0 0 1 39.2624,69.89571 z" />
+                            </g>
+                            <g clip-path="url(#clip-eye-right)">
+                                <path class="logo-path-c"
+                                    d="m 1193.7055,604.41071 a 39.262405,69.895706 0 0 1 -39.2624,69.8957 39.262405,69.895706 0 0 1 -39.2624,-69.8957 39.262405,69.895706 0 0 1 39.2624,-69.89571 39.262405,69.895706 0 0 1 39.2624,69.89571 z" />
+                            </g>
                             <path class="logo-path-b"
-                                d="M 309.97944,960.42041 V 818.2067 c 0,0 22.25219,47.01191 58.43462,47.01191 36.18243,0 59.84268,-47.01191 59.84268,-47.01191 v 142.21371" />
+                                d="M 306.97944,960.42041 V 818.2067 c 0,0 22.25219,47.01191 58.43462,47.01191 36.18243,0 59.84268,-47.01191 59.84268,-47.01191 v 142.21371" />
                             <path class="logo-path-b"
                                 d="m 606.3262,961.08271 h -116.5165 v -73.13682 -69.04944 h 116.94274" />
                             <path class="logo-path-b" d="m 492.35532,888.58782 h 69.70014" />
