Borrado en cascada de licencias e instructores, paneles de instructor por licencai y separaciomn de vistas
Introduce in-memory log buffering and SSE streaming (DequeHandler + /dev/logs, /dev/logs/stream) and wires root logger to capture console output. Adds comprehensive dev endpoints to list and delete licenses (/dev/licencias, /dev/licencia/{id}) and expands instructor deletion to perform full cascade cleanup of associated students, enrollments, books and related data; includes safer checks before removing shared resources. Adds licencia_id field to Libro model and InstructorResponse schema and includes instructor.licencia_id in login response. Frontend updates: devs.html/devs.js add license monitoring UI, polling and deletion actions; instructor.js and login.html use session-stored licenciaId for license-scoped operations. Misc: minor refactors, error handling and commits/rollbacks to ensure DB integrity during deletions.

--- a/Backend/mistral/TutorDigitalMistra/front/devs.html
+++ b/Backend/mistral/TutorDigitalMistra/front/devs.html
@@ -112,10 +112,33 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
 
+                    <h2 class="page-title" style="margin-top: 40px;">Licencias Activas</h2>
+                    <p class="page-subtitle">Monitor de licencias y ocupación.</p>
+
+                    <div class="glass-card">
+                        <table class="data-table">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Cliente</th>
+                                    <th>Max Alumnos</th>
+                                    <th>Ocupación</th>
+                                    <th>Estado</th>
+                                    <th>Vence</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody id="licensesTableBody">
+                                <!-- Data injected via JS -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-        </main>
+
+    </div>
+    </main>
 
     </div>
 
