--- a/Backend/mistral/TutorDigitalMistra/front/devs.html
+++ b/Backend/mistral/TutorDigitalMistra/front/devs.html
@@ -22,16 +22,14 @@
         <!-- SIDEBAR -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h1><i class="bi bi-code-slash"></i> Dev Panel</h1>
+                <img src="./img/logo.svg" alt="Logo" style="width: 100px; height: 100px;">
+                <h1>Dev Panel</h1>
             </div>
 
             <div class="nav-section">
                 <div class="nav-title">Gestión</div>
-                <button class="nav-btn active" onclick="switchTab('create')">
-                    <i class="bi bi-person-plus"></i> Crear Instructor
-                </button>
-                <button class="nav-btn" onclick="switchTab('list')">
-                    <i class="bi bi-list-ul"></i> Lista de Instructores
+                <button class="nav-btn active" onclick="switchTab('list')">
+                    <i class="bi bi-person-workspace"></i> Instructores
                 </button>
             </div>
 
@@ -50,52 +48,72 @@
 
             <div class="content-container">
 
-                <!-- VIEW: CREATE INSTRUCTOR -->
-                <div id="view-create" class="view-panel active">
-                    <h2 class="page-title">Nuevo Instructor</h2>
-                    <p class="page-subtitle">Crea una cuenta de instructor con licencia dedicada.</p>
-
-                    <div class="glass-card" style="max-width: 600px;">
-                        <form onsubmit="return false">
-                            <div class="input-group-custom">
-                                <label class="label-custom">Usuario (Login)</label>
-                                <input type="text" id="username" class="input-field" placeholder="ej: profe_juan"
-                                    required autocomplete="off">
-                            </div>
-
-                            <div class="input-group-custom">
-                                <label class="label-custom">Nombre Completo (Alias)</label>
-                                <input type="text" id="fullname" class="input-field" placeholder="ej: Juan Pérez"
-                                    required autocomplete="off">
-                            </div>
-
-                            <div class="input-group-custom">
-                                <label class="label-custom">Máximo de Alumnos</label>
-                                <input type="number" id="maxStudents" class="input-field" placeholder="ej: 10"
-                                    value="10" min="1" required>
-                            </div>
-
-                            <div class="input-group-custom" style="position:relative;">
-                                <label class="label-custom">Contraseña</label>
-                                <input type="password" id="password" class="input-field"
-                                    placeholder="Establece una contraseña" required autocomplete="off">
-                                <i id="eyeIcon" class="bi bi-eye-fill toggle-password" onclick="togglePass()"></i>
-                            </div>
-
-                            <button type="button" id="btnCreate" class="btn-primary" onclick="createInstructor()">
-                                <i class="bi bi-check-lg"></i> Crear Instructor
-                            </button>
-                        </form>
-
-                        <div id="msgBoxCreate" class="message-box"></div>
+                <!-- MAIN VIEW: INSTRUCTORS & LICENSES -->
+                <div id="view-list" class="view-panel active" style="max-width: 1000px;">
+                    <div
+                        style="display:flex; justify-content:space-between; align-items:flex-start; margin-bottom:10px;">
+                        <div>
+                            <h2 class="page-title">Configuración de Instructores</h2>
+                            <p class="page-subtitle">Gestiona cuentas, alumnos y licencias del sistema.</p>
+                        </div>
+                        <button class="btn-primary" onclick="toggleCreateForm()">
+                            <i class="bi bi-person-plus-fill"></i> Nuevo Instructor
+                        </button>
                     </div>
-                </div>
 
-                <!-- VIEW: LIST INSTRUCTORS -->
-                <div id="view-list" class="view-panel" style="display:none; max-width: 1000px;">
-                    <h2 class="page-title">Instructores Registrados</h2>
-                    <p class="page-subtitle">Gestiona los instructores del sistema.</p>
+                    <!-- COLLAPSIBLE CREATE FORM -->
+                    <div id="create-form-container"
+                        style="display:none; margin-bottom:30px; animation: slideDown 0.3s ease-out;">
+                        <div class="glass-card" style="border-color: rgba(59,130,246,0.3);">
+                            <div
+                                style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+                                <h3 style="margin:0; color:#fff; font-size:1.1rem;">Registrar Nuevo Instructor</h3>
+                                <button class="btn-icon" onclick="toggleCreateForm()"><i
+                                        class="bi bi-x-lg"></i></button>
+                            </div>
 
+                            <form onsubmit="return false" style="display:grid; grid-template-columns: 1fr; gap:20px;">
+                                <div class="input-group-custom">
+                                    <label class="label-custom">Nombre Completo (Alias)</label>
+                                    <input type="text" id="fullname" class="input-field" placeholder="ej: Juan Pérez"
+                                        required autocomplete="off">
+                                </div>
+                                <div class="input-group-custom">
+                                    <label class="label-custom">Máximo de Alumnos</label>
+                                    <input type="number" id="maxStudents" class="input-field" value="10" min="1"
+                                        required>
+                                </div>
+                                <div style="display:flex; justify-content:flex-end; gap:12px; margin-top:10px;">
+                                    <button type="button" class="nav-btn" style="width:auto; margin:0;"
+                                        onclick="toggleCreateForm()">Cancelar</button>
+                                    <button type="button" id="btnCreate" class="btn-primary"
+                                        onclick="createInstructor()">
+                                        <i class="bi bi-magic"></i> Auto-generar y Crear
+                                    </button>
+                                </div>
+                            </form>
+                            <div id="newCredentialsBox" class="glass-card"
+                                style="display:none; margin-top:20px; border:1px solid #34d399; background:rgba(16,185,129,0.05);">
+                                <h4 style="color:#34d399; margin-top:0;">¡Instructor Creado!</h4>
+                                <p style="font-size:0.9rem; color:#cbd5e1;">Copia estas credenciales y envíalas al
+                                    instructor. Deberá cambiar la contraseña al entrar.</p>
+                                <div
+                                    style="background:rgba(0,0,0,0.3); padding:15px; border-radius:8px; margin:10px 0; font-family:monospace;">
+                                    <div style="margin-bottom:5px;">User: <span id="newUsername"
+                                            style="color:#fff; font-weight:bold;">-</span></div>
+                                    <div>Pass: <span id="newPassword" style="color:#fbbf24; font-weight:bold;">-</span>
+                                    </div>
+                                </div>
+                                <button class="btn-primary" style="width:100%; padding:8px;"
+                                    onclick="copyCredentials()">
+                                    <i class="bi bi-clipboard"></i> Copiar Todo
+                                </button>
+                            </div>
+                            <div id="msgBoxCreate" class="message-box"></div>
+                        </div>
+                    </div>
+
+                    <!-- INSTRUCTORS TABLE -->
                     <div class="glass-card">
                         <table class="data-table">
                             <thead>
@@ -113,8 +131,9 @@
                         </table>
                     </div>
 
-                    <h2 class="page-title" style="margin-top: 40px;">Licencias Activas</h2>
-                    <p class="page-subtitle">Monitor de licencias y ocupación.</p>
+                    <!-- LICENSES TABLE -->
+                    <h2 class="page-title" style="margin-top: 50px;">Monitor de Licencias</h2>
+                    <p class="page-subtitle">Estado global de consumo y expiración.</p>
 
                     <div class="glass-card">
                         <table class="data-table">
@@ -136,6 +155,7 @@
                     </div>
                 </div>
             </div>
+        </main>
 
     </div>
     </main>
