quitado ondeo de logo, visualizacion de nombre en la vista de instructor

--- a/Backend/mistral/TutorDigitalMistra/front/devs.html
+++ b/Backend/mistral/TutorDigitalMistra/front/devs.html
@@ -119,8 +119,8 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>Nombre / Login</th>
-                                    <th>Email (Dummy)</th>
+                                    <th>Alias / Login</th>
+                                    <th>Email (Interno)</th>
                                     <th>Rol</th>
                                     <th>Acciones</th>
                                 </tr>
